--- a/src/components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/HeaderMenu/HeaderMenu.module.scss
@@ -4,7 +4,7 @@
   @media (min-width: 640px) {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 8px;
   }
 
   @media (min-width: 1199px) {
@@ -27,7 +27,7 @@
     list-style: none;
     display: flex;
     flex-direction: row;
-    gap: 32px;
+    gap: 12px;
   }
 
   @media (min-width: 1199px) {
