--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,7 +1,7 @@
 .menu {
   position: fixed;
   inset: 0;
-  z-index: 10;
+  z-index: 30;
   background-color: var(--color-black);
   display: flex;
   flex-direction: column;
@@ -52,7 +52,7 @@
   gap: 24px;
   flex: 1;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 24px;
 }
 
